[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag_toolkit"
version = "2.4.0-SNAPSHOT"
description = "A Python toolkit for building GraphRAG applications"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["src/requirements.txt"]}
